--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
-		<title>
-			Binding
-		</title>
+		<title>Binding</title>
+		<link href="assets/reset.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>Binding</h1>
