--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
 		<link href="assets/reset.css" rel="stylesheet">
 		<link href="assets/common.css" rel="stylesheet">
 		<link href="assets/direction-1.css" rel="stylesheet">
-		<link href="assets/direction-2.css" rel="stylesheet">
-		<link href="assets/direction-3.css" rel="stylesheet">
+		<!-- <link href="assets/direction-2.css" rel="stylesheet">
+		<link href="assets/direction-3.css" rel="stylesheet"> -->
 	</head>
 
 	<body>
 		<header>
 			<h1>Colour and Culture</h1>
-			<p>Ruben Pater, 2016</p>
+			<p>
+				Discover how different cultures attach unique meanings to colors, from luck and power to spirituality and mourning. Read on to learn how color psychology influences everything from branding to design.
+			</p>
+			<section class="author-info">
+				<p>Written by: Ruben Pater</p>
+				<p>Published in: 2016</p>
+			</section>
 		</header>
 
 		<section>
-			<h2>Colour Psychology</h2>
+			<h2 id="first-h2">Colour Psychology</h2>
 			<p>
 				How people respond to colour is of great interest to those who work in marketing. Colour psychology research is often focused on how the colour of a logo or a product will yield higher sales, and what colour preferences can be found in certain age groups and cultures. 
 			</p>
@@ -41,56 +47,56 @@
 			<section>
 				<h3>Black</h3>
 				<p>
-					was the colour of mourning during the Roman empire, and in Judaism  and Christianity it is associated with death and evil. During the  Middle Ages, black clothing became popular, and during the Renaissance it was worn by the wealthy and nobility in all parts of Europe. In the nineteenth century, the black army was the nickname of the  Russian anarchists. In the twentieth century, black became the colour of  Italian and German fascism, who were called blackshirts. In Shia Islam black is a very devout colour. The black standard is one of the flags of Muhammad in Islam. The black standard has been appropriated as a symbol by jihadism since the late 1990s.
+					Black was the colour of mourning during the Roman empire, and in Judaism  and Christianity it is associated with death and evil. During the  Middle Ages, black clothing became popular, and during the Renaissance it was worn by the wealthy and nobility in all parts of Europe. In the nineteenth century, the black army was the nickname of the  Russian anarchists. In the twentieth century, black became the colour of  Italian and German fascism, who were called blackshirts. In Shia Islam black is a very devout colour. The black standard is one of the flags of Muhammad in Islam. The black standard has been appropriated as a symbol by jihadism since the late 1990s.
 				</p>
 			</section>
 
 			<section>
 				<h3>White</h3>
 				<p>
-					is the colour of death and mourning in China, Vietnam, and Korea. In India, people wear white after the death of a family member. Jewish, Christian and Hindu religions use the colour white in rituals to indicate  purity, chastity, virginity, and peace. White is the traditional colour of bridal dresses in Western cultures. In Europe, white was historically associated with absolute monarchy. It became synonymous in the twentieth century with anti-communist and counter-revolutionary movements in Russia. A white dove is an international sign of peace, and a white flag is the international sign of surrender.
+					White is the colour of death and mourning in China, Vietnam, and Korea. In India, people wear white after the death of a family member. Jewish, Christian and Hindu religions use the colour white in rituals to indicate  purity, chastity, virginity, and peace. White is the traditional colour of bridal dresses in Western cultures. In Europe, white was historically associated with absolute monarchy. It became synonymous in the twentieth century with anti-communist and counter-revolutionary movements in Russia. A white dove is an international sign of peace, and a white flag is the international sign of surrender.
 				</p>
 			</section>
 
 			<section>
 				<h3>Yellow</h3>
 				<p>
-					is the most visible colour from a distance, so it is often used for  objects that need high visibility, such as ambulances, road maintenance equipment, and taxis. In East Asia, yellow is considered sacred and imperial. In China it is the colour for royalty, and during the Qing  Dynasty, only members of the imperial household were permitted to wear yellow. In China it is still seen as the colour of happiness, glory,  wisdom, harmony, and culture. Yellow is used to symbolise gold as one of the colours of the Catholic church and the Vatican. Yellow in Italian is giallo and a nickname for crime stories. The demonstrations in the Philippines in 1986 were also known as the yellow revolution. 
+					Yellow is the most visible colour from a distance, so it is often used for  objects that need high visibility, such as ambulances, road maintenance equipment, and taxis. In East Asia, yellow is considered sacred and imperial. In China it is the colour for royalty, and during the Qing  Dynasty, only members of the imperial household were permitted to wear yellow. In China it is still seen as the colour of happiness, glory,  wisdom, harmony, and culture. Yellow is used to symbolise gold as one of the colours of the Catholic church and the Vatican. Yellow in Italian is giallo and a nickname for crime stories. The demonstrations in the Philippines in 1986 were also known as the yellow revolution. 
 				</p>
 			</section>
 
 			<section>
 				<h3>Orange</h3>
 				<p>
-					comes from the Sanskrit word for orange tree. In Asia it is known as saffron, named after the spice. In Hinduism, the divinity Krishna is portrayed dressed in saffron. In Buddhism, saffron is the colour of illumination, the highest state of perfection, and the colour of robes worn by monks. Orange ribbons are used to promote awareness and prevention of self-injury. In Northern Ireland the protestant order is called the Orangemen, who wear orange during annual marches.  Orange is the colour of the Dutch monarchy, and in South Africa,  orange was the colour of the ruling party during Apartheid. Prisoners are often dressed in orange to make them distinctive in case of escape. 
+					Orange comes from the Sanskrit word for orange tree. In Asia it is known as saffron, named after the spice. In Hinduism, the divinity Krishna is portrayed dressed in saffron. In Buddhism, saffron is the colour of illumination, the highest state of perfection, and the colour of robes worn by monks. Orange ribbons are used to promote awareness and prevention of self-injury. In Northern Ireland the protestant order is called the Orangemen, who wear orange during annual marches.  Orange is the colour of the Dutch monarchy, and in South Africa,  orange was the colour of the ruling party during Apartheid. Prisoners are often dressed in orange to make them distinctive in case of escape. 
 				</p>
 			</section>
 
 			<section>
 				<h3>Red</h3>
 				<p>
-					comes from the Sanskrit word for blood. In Greek mythology it was the colour for the planet Mars and the god of war. Red is the most important colour in China and means good luck and happiness. Red  promotes long life, and it is used in Chinese new year celebrations. Red is the traditional colour for brides in India and Nepal. In Japan, a red kimono symbolises happiness and good luck. In Japan’s Shinto religion, red is the symbol of life. The Russian word for red has the same root in Old Russian as the word ‘beautiful’. The oldest symbol of socialism is the red flag, and red is still associated with socialist and communist parties. The red shirts, or the red movement, was the name of those who opposed the 2006 military coup in Thailand.
+					Red comes from the Sanskrit word for blood. In Greek mythology it was the colour for the planet Mars and the god of war. Red is the most important colour in China and means good luck and happiness. Red  promotes long life, and it is used in Chinese new year celebrations. Red is the traditional colour for brides in India and Nepal. In Japan, a red kimono symbolises happiness and good luck. In Japan’s Shinto religion, red is the symbol of life. The Russian word for red has the same root in Old Russian as the word ‘beautiful’. The oldest symbol of socialism is the red flag, and red is still associated with socialist and communist parties. The red shirts, or the red movement, was the name of those who opposed the 2006 military coup in Thailand.
 				</p>
 			</section>
 
 			<section>
 				<h3>Green</h3>
 				<p>
-					is the colour of nature in many cultures. Early rituals centred on the hope of a good harvest with green vegetables. Green is the traditional colour of Islam, the colour of the prophet Muhammed, which is why many flags in the Islamic world use the colour green. Since the 1980s, green has become the colour of environmental parties and organisations. Green parties in Europe have programmes based on ecology and environment. The word greenwashing is used to describe the advertising of companies that use positive environmental practices to cover up environmentally unfriendly activities. A ‘green room’ is used in television  and theatre to quiet nervous performers. 
+					Green is the colour of nature in many cultures. Early rituals centred on the hope of a good harvest with green vegetables. Green is the traditional colour of Islam, the colour of the prophet Muhammed, which is why many flags in the Islamic world use the colour green. Since the 1980s, green has become the colour of environmental parties and organisations. Green parties in Europe have programmes based on ecology and environment. The word greenwashing is used to describe the advertising of companies that use positive environmental practices to cover up environmentally unfriendly activities. A ‘green room’ is used in television  and theatre to quiet nervous performers. 
 				</p>
 			</section>
 
 			<section>
 				<h3>Blue</h3>
 				<p>
-					is tested as the colour that is best liked by all cultures, which is how it became the colour for international business. The United Nations chose blue as a colour in 1946, but the colour has no special significance. Bluewashing is a term for companies that join the United  Nations ‘Global Impact Initiative’ only for PR reasons. ‘Blue collar worker’ refers to the shirts worn by people working manual labour jobs. The Tuareg of North Africa wear blue turbans, dyed with indigo.  Azure blue is the national colour of Italy, the national soccer team is called the Azzurri. Several languages, like Japanese, Thai, Korean, and Lakota Sioux, use the same word to describe blue and green. 
+					Blue is tested as the colour that is best liked by all cultures, which is how it became the colour for international business. The United Nations chose blue as a colour in 1946, but the colour has no special significance. Bluewashing is a term for companies that join the United  Nations ‘Global Impact Initiative’ only for PR reasons. ‘Blue collar worker’ refers to the shirts worn by people working manual labour jobs. The Tuareg of North Africa wear blue turbans, dyed with indigo.  Azure blue is the national colour of Italy, the national soccer team is called the Azzurri. Several languages, like Japanese, Thai, Korean, and Lakota Sioux, use the same word to describe blue and green. 
 				</p>
 			</section>
 
 			<section>
 				<h3>Purple</h3>
 				<p>
-					was the the most expensive dye in Roman times, and was worn by  Roman magistrates, Byzantine emperors, and the rulers of the Holy Roman Empire. During the reign of Elizabeth I, only royalty was  allowed to wear purple in England. Roman Catholic bishops still wear purple as a colour of royalty. In Japan, the colour is traditionally  associated with the emperor and aristocracy. In Thailand, widows  in mourning wear purple. In Western politics the colour purple is neutral, and used for a coalition between a left-wing and a right-wing  party. The Women’s Suffrage movement used purple, and the colour was adopted in the 1970s by the women’s liberation movement. Purple and pink are both associated with the LGBT community. 
+					Purple was the the most expensive dye in Roman times, and was worn by  Roman magistrates, Byzantine emperors, and the rulers of the Holy Roman Empire. During the reign of Elizabeth I, only royalty was  allowed to wear purple in England. Roman Catholic bishops still wear purple as a colour of royalty. In Japan, the colour is traditionally  associated with the emperor and aristocracy. In Thailand, widows  in mourning wear purple. In Western politics the colour purple is neutral, and used for a coalition between a left-wing and a right-wing  party. The Women’s Suffrage movement used purple, and the colour was adopted in the 1970s by the women’s liberation movement. Purple and pink are both associated with the LGBT community. 
 				</p>
 			</section>
 
