article html and css

--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -9,6 +9,23 @@
 
 	<body>
 		<header>
+			<nav>
+				<ul class="navbar">
+					<li>
+						<a href="../">Home</a>
+					</li>
+					<li>
+						<a href="../01 colour and culture/">01 Colour and Culture</a>
+					</li>
+					<li>
+						<a href="../02 everyday color theory/">02 Everyday Color Theory</a>
+					</li>
+					<li>
+						<a href="../03 gradients/">03 Gradients</a>
+					</li>
+				</ul>
+			</nav>
+
 			<h1 id="heading-number">01</h1>
 			<h1>Colour and Culture</h1>
 			<p>
