--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 		<title>
 			Landing Page
 		</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="../assets/reset.css" rel="stylesheet">
+		<link href="style.css" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -10,15 +13,18 @@
 			Landing Page
 		</h1>
 		<nav>
-			<ul>
+			<ul class="navbar">
 				<li>
-					<a href="01 colour and culture/">01 Colour and Culture</a>
+					<a href="../">Home</a>
 				</li>
 				<li>
-					<a href="02 everyday color theory/">02 Everyday Color Theory</a>
+					<a href="../01 colour and culture/">01 Colour and Culture</a>
 				</li>
 				<li>
-					<a href="03 gradients/">03 Gradients</a>
+					<a href="../02 everyday color theory/">02 Everyday Color Theory</a>
+				</li>
+				<li>
+					<a href="../03 gradients/">03 Gradients</a>
 				</li>
 			</ul>
 		</nav>
