--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="../assets/reset.css" rel="stylesheet">
-		<link href="style.css" rel="stylesheet">
+		<link href="landing.css" rel="stylesheet">
 	</head>
 	
 	<body>
-		<h1>
-			Landing Page
-		</h1>
 		<nav>
 			<ul class="navbar">
 				<li>
 					<a href="../">Home</a>
 				</li>
 				<li>
-					<a href="../01 colour and culture/">01 Colour and Culture</a>
+					<a href="../01 colour and culture/">01</a>
 				</li>
 				<li>
-					<a href="../02 everyday color theory/">02 Everyday Color Theory</a>
+					<a href="../02 everyday color theory/">02</a>
 				</li>
 				<li>
-					<a href="../03 gradients/">03 Gradients</a>
+					<a href="../03 gradients/">03</a>
 				</li>
 			</ul>
 		</nav>
+
+		<h1>
+			Landing Page
+		</h1>
 	</body>
 </html>
