--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -4,28 +4,28 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="../assets/reset.css" rel="stylesheet">
 		<link href="../assets/common.css" rel="stylesheet">
-		<!-- <link href="style.css" rel="stylesheet"> -->
+		<link href="style.css" rel="stylesheet">
 	</head>
 
 	<body>
+		<nav>
+			<ul class="navbar">
+				<li>
+					<a href="../">Home</a>
+				</li>
+				<li>
+					<a href="../01 colour and culture/">01</a>
+				</li>
+				<li>
+					<a href="../02 everyday color theory/">02</a>
+				</li>
+				<li>
+					<a href="../03 gradients/">03</a>
+				</li>
+			</ul>
+		</nav>
+		
 		<header>
-			<nav>
-				<ul class="navbar">
-					<li>
-						<a href="../">Home</a>
-					</li>
-					<li>
-						<a href="../01 colour and culture/">01</a>
-					</li>
-					<li>
-						<a href="../02 everyday color theory/">02</a>
-					</li>
-					<li>
-						<a href="../03 gradients/">03</a>
-					</li>
-				</ul>
-			</nav>
-
 			<h1 id="heading-number">01</h1>
 			<h1>Colour and Culture</h1>
 			<p>
