added three articles

--- a/03 gradients/index.html
+++ b/03 gradients/index.html
@@ -26,112 +26,108 @@
 		</nav>
 		
 		<header>
-			<h1 id="heading-number">01</h1>
-			<h1>Colour and Culture</h1>
+			<h1 id="heading-number">03</h1>
+			<h1>Gradients</h1>
 			<p>
-				Discover how different cultures attach unique meanings to colors, from luck and power to spirituality and mourning. Read on to learn how color psychology influences everything from branding to design.
+				the colorful design trend aiming to soothe these anxious times: Here’s why The Daily, Coachella, and Facebook all use backgrounds that look like a sunset.
 			</p>
 			<section class="author-info">
-				<p>Written by: Ruben Pater</p>
-				<p>Published in: 2016</p>
+				<p>Written by: Daisy Alioto</p>
+				<p>Published in: March 1st, 2019</p>
 			</section>
 		</header>
 
 		<section>
-			<h2 id="first-h2">❯ Colour Psychology</h2>
+			<h2 id="first-h2">❯ What it is?</h2>
 			<p>
-				How people respond to colour is of great interest to those who work in marketing. Colour psychology research is often focused on how the colour of a logo or a product will yield higher sales, and what colour preferences can be found in certain age groups and cultures. 
-			</p>
-			<p>
-				The study of the psychological effects of colour have coincided with colour theory in general. Goethe focused on the experience of colour in his Zur farbenlehre from 1810, in opposition to Sir Isaac Newton’s rational approach. Goethe and Schiller coupled colours to character traits: red for beautiful, yellow for good, green for useful, and blue for common. Gestalt psychology in the early 1900s also  attributed universal emotions to colours, a theory that was taught to students at the Bauhaus by Wassily Kandinsky. 
-			</p>
-			<p>
-				The best known colour psychology test was conducted by Max Lüscher in the 1940s, when he tested the responses of people to a series of coloured cards. A psychologist could interpret the person’s character based on the test results. The interpretation of this research in colour psychology is disputed, since it is not clear whether people respond to the colours or the cultural concept of the colour. It is more likely that the cultural context, our upbringing, and personal preferences influence our interpretation of colour more than anything else. 
-			</p>
-			<p>
-				Some colour psychology findings have been proven to work. ‘Cooler’ colours can have a calming influence on people, which is why hospitals and prison walls are often painted in a soft greenish colour. Another research shows that the colour of placebo pills  influences their effectiveness. Blue coloured pills work better as  depressants, and red colour pills better as stimulants.
+				A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.
 			</p>
 		</section>
 
 			<section>
-				<h2>❯ Colour and Culture</h2>
+				<h2>❯ Where it is?</h2>
 				<p>
-					Research shows that ninety-eight languages have words for the same eleven basic colours; however, the meaning a colour may have can be very different. There are conflicting theories on whether the cultural meanings of colours can be categorised. Meanings can change over time and depend on the context. Black may be the colour of mourning in many countries, though a black book cover or a black poster is not always associated with death. Another example is that brides in China traditionally wear red, but many brides have started to wear white in recent decades. The cultural meaning of colours is not set but always changing. The next few pages list some of the meanings of colours in different cultures.
+					Gradients are seemingly everywhere in media and marketing. They are part of a suite of Facebook status backdrops introduced in 2017 and the branding for the New York Times’ popular podcast The Daily, which displays a yellow to blue gradient.
 				</p>
-			</section>
-
-			<section class="black">
-				<h3><span id="black">01</span> Black</h3>
 				<p>
-					Black was the colour of mourning during the Roman empire, and in Judaism  and Christianity it is associated with death and evil. During the  Middle Ages, black clothing became popular, and during the Renaissance it was worn by the wealthy and nobility in all parts of Europe. In the nineteenth century, the black army was the nickname of the  Russian anarchists. In the twentieth century, black became the colour of  Italian and German fascism, who were called blackshirts. In Shia Islam black is a very devout colour. The black standard is one of the flags of Muhammad in Islam. The black standard has been appropriated as a symbol by jihadism since the late 1990s.
+					Gradients have taken over Coachella’s app and website (if you watch carefully, the colors shift). Ally’s billboard in A Star Is Born is a full-on gradient, and so was the branding for the Oscars ceremony that recognized Lady Gaga.
 				</p>
-			</section>
-
-			<section class="white">
-				<h3><span id="white">02</span> White</h3>
 				<p>
-					White is the colour of death and mourning in China, Vietnam, and Korea. In India, people wear white after the death of a family member. Jewish, Christian and Hindu religions use the colour white in rituals to indicate  purity, chastity, virginity, and peace. White is the traditional colour of bridal dresses in Western cultures. In Europe, white was historically associated with absolute monarchy. It became synonymous in the twentieth century with anti-communist and counter-revolutionary movements in Russia. A white dove is an international sign of peace, and a white flag is the international sign of surrender.
+					On Instagram, they provide a product backdrop for popular Korean beauty brand Glow, and have been embraced by indie magazines Gossamer and Anxy — both designed by Berkeley studio Anagraph.
 				</p>
-			</section>
-
-			<section class="yellow">
-				<h3><span id="yellow">03</span> Yellow</h3>
 				<p>
-					Yellow is the most visible colour from a distance, so it is often used for  objects that need high visibility, such as ambulances, road maintenance equipment, and taxis. In East Asia, yellow is considered sacred and imperial. In China it is the colour for royalty, and during the Qing  Dynasty, only members of the imperial household were permitted to wear yellow. In China it is still seen as the colour of happiness, glory,  wisdom, harmony, and culture. Yellow is used to symbolise gold as one of the colours of the Catholic church and the Vatican. Yellow in Italian is giallo and a nickname for crime stories. The demonstrations in the Philippines in 1986 were also known as the yellow revolution. 
+					On the luxury front, Brooklyn wallpaper company Calico has released an entire collection of gradient wallpapers called Aurora. Meanwhile, Spanish fashion house Loewe has introduced a version of their trendy Elephant bag in a spectrum of pink to yellow.
 				</p>
-			</section>
-
-			<section class="orange">
-				<h3><span id="orange">04</span> Orange</h3>
 				<p>
-					Orange comes from the Sanskrit word for orange tree. In Asia it is known as saffron, named after the spice. In Hinduism, the divinity Krishna is portrayed dressed in saffron. In Buddhism, saffron is the colour of illumination, the highest state of perfection, and the colour of robes worn by monks. Orange ribbons are used to promote awareness and prevention of self-injury. In Northern Ireland the protestant order is called the Orangemen, who wear orange during annual marches.  Orange is the colour of the Dutch monarchy, and in South Africa,  orange was the colour of the ruling party during Apartheid. Prisoners are often dressed in orange to make them distinctive in case of escape. 
-				</p>
-			</section>
-
-			<section class="red">
-				<h3><span id="red">05</span> Red</h3>
-				<p>
-					Red comes from the Sanskrit word for blood. In Greek mythology it was the colour for the planet Mars and the god of war. Red is the most important colour in China and means good luck and happiness. Red  promotes long life, and it is used in Chinese new year celebrations. Red is the traditional colour for brides in India and Nepal. In Japan, a red kimono symbolises happiness and good luck. In Japan’s Shinto religion, red is the symbol of life. The Russian word for red has the same root in Old Russian as the word ‘beautiful’. The oldest symbol of socialism is the red flag, and red is still associated with socialist and communist parties. The red shirts, or the red movement, was the name of those who opposed the 2006 military coup in Thailand.
-				</p>
-			</section>
-
-			<section class="green">
-				<h3><span id="green">06</span> Green</h3>
-				<p>
-					Green is the colour of nature in many cultures. Early rituals centred on the hope of a good harvest with green vegetables. Green is the traditional colour of Islam, the colour of the prophet Muhammed, which is why many flags in the Islamic world use the colour green. Since the 1980s, green has become the colour of environmental parties and organisations. Green parties in Europe have programmes based on ecology and environment. The word greenwashing is used to describe the advertising of companies that use positive environmental practices to cover up environmentally unfriendly activities. A ‘green room’ is used in television  and theatre to quiet nervous performers. 
-				</p>
-			</section>
-
-			<section class="blue">
-				<h3><span id="blue">07</span> Blue</h3>
-				<p>
-					Blue is tested as the colour that is best liked by all cultures, which is how it became the colour for international business. The United Nations chose blue as a colour in 1946, but the colour has no special significance. Bluewashing is a term for companies that join the United  Nations ‘Global Impact Initiative’ only for PR reasons. ‘Blue collar worker’ refers to the shirts worn by people working manual labour jobs. The Tuareg of North Africa wear blue turbans, dyed with indigo.  Azure blue is the national colour of Italy, the national soccer team is called the Azzurri. Several languages, like Japanese, Thai, Korean, and Lakota Sioux, use the same word to describe blue and green. 
-				</p>
-			</section>
-
-			<section class="purple">
-				<h3><span id="Purple">08</span> Purple</h3>
-				<p>
-					Purple was the the most expensive dye in Roman times, and was worn by  Roman magistrates, Byzantine emperors, and the rulers of the Holy Roman Empire. During the reign of Elizabeth I, only royalty was  allowed to wear purple in England. Roman Catholic bishops still wear purple as a colour of royalty. In Japan, the colour is traditionally  associated with the emperor and aristocracy. In Thailand, widows  in mourning wear purple. In Western politics the colour purple is neutral, and used for a coalition between a left-wing and a right-wing  party. The Women’s Suffrage movement used purple, and the colour was adopted in the 1970s by the women’s liberation movement. Purple and pink are both associated with the LGBT community. 
+					Are gradients drinkable? Heck yes, they are. Seltzer startup Recess has gone all-in on gradients in their branding.
 				</p>
 			</section>
 
 			<section>
-				<h2>❯ National Colours</h2>
+				<h2>❯ Why you’re seeing it everywhere?</h2>
 				<p>
-					The flag has been the most prominent symbol of national identity since the nineteenth century. A new national flag often marks a revolution  or a political change. Flags have a military origin, and were used to identify military units from one another in the Roman legions.
+					Gradients are the confluence of three different trends: Light and Space art, vaporwave, and bisexual lighting.
+				</p>
+			</section>
+
+			<section>
+				<h3>Light and Space</h3>
+				<p>
+					In the art and design world, Light and Space — developed in the 1960s and ’70s — has been experiencing a revival thanks to its Instagramability. Light and Space pioneer James Turrell has been embraced by celebrities like Beyoncé, Drake, and Kanye West. Drake’s Hotline Bling video was inspired by Turrell’s light-infused rooms called Ganzfelds. The Kardashian-Jenner-West crew posted an Instagram in front of one of Turrell’s works in Los Angeles. (I was yelled at by security for taking a picture there but it’s fine.)
 				</p>
 				<p>
-					Different national flags often use similar colours, sometimes even with the same meaning. Thirty-eight percent of the world’s  national flags use red as a colour, which symbolises the blood spilt for  independence, or on the battlefield. One of the most used colour  combinations is red, white, and blue (Chile, Panama, Russia, Samoa, United Kingdom, Thailand, etc.) where blue often symbolises the domination over sky or sea.
+					Most recently, West donated $10 million dollars to the artist.
 				</p>
 				<p>
-					Many African countries use red, black, and green in their flags. This stems from the Pan-African flag from 1920. The red symbolises the blood spilled for liberation, black is for the African people, and green for the continent’s natural wealth.
+					James Turrell’s works come with a warning because the visitor quickly loses all depth perception. Soft gradients are alluring because they cut through the noise of social media, but they also are disorienting. The Twitter bot soft landscapes operates on a similar principle, but some days the landscape all but disappears.
 				</p>
 				<p>
-					There have been a few monochrome flags. Morocco had a deep red flag for over two hundred years. Afghanistan had an all black flag at the end of the nineteenth century. And during the reign of the  Taliban in 1996, Afghanistan had an all white flag. The last remaining monochrome flag in the world was the Libyan flag, a plain green field without markings or insignia.
+					“It’s nice to see calming things amongst all of the social ramifications of Instagram,” says Rion Harmon of Day Job, the design firm of record for Recess. Harmon compares the Recess branding to a sunset so beautiful you can’t help but stare (or take a picture) however busy you are. Changes to the sky are even more pronounced in Los Angeles, where Harmon’s studio is now based. “The quality of light in LA is something miraculous,” he says. The Light and Space movement was also started in Southern California, and it’s in the DNA of Coachella.
+				</p>
+			</section>
+
+			<section>
+				<h3>Vaporwave</h3>
+				<p>
+					Gradients might be a manifestation of longing for sunshine and surf. But they also belong to the placeless digital citizen. 1980s and ’90s kids may remember messing around in Microsoft Paint and Powerpoint as a child, filling in shapes with these same gradients. It’s no surprise that this design effect is part of the technological nostalgia that fuels the vaporwave movement.
 				</p>
 				<p>
-					The green flag was a personal choice of Muammar Gaddafi whose manifesto was called the ‘Green Book’. Artist Yuri Veerman collected the different digital versions of the Libyan flag that were discussed on the English Wikipedia page, ‘Flag of Libya’. Between 2005 and 2011 the chromatic representation of Libya was revised fifteen times, each with different shade of green. After a six-year fight over the right shade of ‘Gadaffi green’, a fifteenth revision was made, marking the fall of the Libyan regime and the last monochrome flag. 
+					Vaporwave is a musical and aesthetic movement (started in the early 2010s) that spliced ambient music, advertising, and imagery from when the internet started. Gradient artwork shared by the clothing brand Public Space is vaporwave. So is this meme posted by direct-to-consumer health startup Hers.
+				</p>
+			</section>
+
+			<section>
+				<h3>Bisexual lighting</h3>
+				<p>
+					When Facebook rolled out gradient status backgrounds in 2017, they knew what they were doing. “They have so much data into how the world works,” says Kerry Flynn, platforms reporter at Digiday. “They had a slow rollout to the color gradients … Obviously they could have pulled the plug anytime.”
+				</p>
+				<p>
+					Flynn goes on to explain that Facebook realized they had become their own worst enemy. There was so much information on their platform that personal sharing was down and they had to make it novel again. “Facebook wants our personal data, as much as possible. Hence, colorful backgrounds that encourage me to post information about myself and for my friends to ‘Like’ it and comment,” she says.
+				</p>
+				<p>
+					It’s ironic that in order to do so, Facebook borrowed from a digital texture most millennials associate with a time before Facebook. But it also mimics a current trend in film and television: bisexual lighting.
+				</p>
+				<p>
+					As Know Your Meme explains, “bisexual lighting is a slang in the queer community for neon lighting with high emphasis on pinks, purples, and blues in film.” These pinks, purples and blues often fade into one another — appearing like a gradient when rendered in two dimensions. Bisexual lighting shows up in the futuristic genre cyberpunk, which imagines an era in which high technology and low technology combine and cities are neon-bathed, landmarkless Gothams. (Overlapping with vaporwave.) Mainstream examples of cyberpunk include Blade Runner, Ghost in the Shell, and Black Mirror (specifically the “San Junipero” episode). Hotline Bling makes the list of examples for bisexual lighting; the gradients come full circle.
+				</p>
+			</section>
+
+			<section>
+				<h2>❯ The Rise of Gradients</h2>
+				<p>
+					Tati Pastukhova, co-founder of interactive art space ARTECHOUSE, says gradients have become more popular as computer display quality increases. She says the appeal of gradients is “the illusion of dimension, and giving 2-D designs 3-D appeal.” ARTECHOUSE is full of light-based digital installations, but visitors naturally gravitate toward what is most photogenic — including, unexpectedly, the soft lighting the space installed along their staircase for safety reasons.
+				</p>
+				<p>
+					Before gradients, neon lettering was the Instagram lighting aesthetic du jour. Gradients are wordless — like saying Live Laugh Love with just colors. “There’s an inherent progression in gradients, you are being taken through something. Like that progression of Live Laugh Love. Of starting at one point and ending at another point. Evoking that visually is something people are very drawn to,” says Taylor Lorenz, a staff writer at the Atlantic who covers internet culture.
+				</p>
+				<p>
+					Gradients are also boundaryless. In 2016, artist Wolfgang Tillmans used gradients in his anti-Brexit poster campaign. Through gradients, designers have found the perfect metaphor for subjectivity in an era when even the word “fact” is up for debate. “Gradients are a visual manifestation of all of these different spectrums that we live on,” including those of politics, gender, and sexuality, says Lorenz. “Before, I think we lived in a binary world. [Gradients are] a very modern representation of the world.”
+				</p>
+				<p>
+					At the very least, gradients offer an opportunity to self-soothe.
+				</p>
+				<p>
+					Calico co-founder Nick Cope says the Aurora collection is often used in meditation rooms. He and his wife have installed it across from their bed at home. “The design was created to immerse viewers in waves and washes of tranquil atmospheric color,” Cope says, adding, “Regardless of the weather, we wake up to a sunrise every morning.”
 				</p>
 			</section>
 
