--- a/03 everyday color theory/index.html
+++ b/03 everyday color theory/index.html
@@ -26,15 +26,15 @@
 		</nav>
 
 		<header>
-			<h1 id="heading-number">02</h1>
+			<h1 id="heading-number">03</h1>
 			<h1>Everyday Color Theory</h1>
 			<p>
 				A poetic crash course on the history of color: 
 				A version of this essay was presented at SPAN 2019 during the “Hue & Glue: Hands-On Color Theory” workshop. Read to the end to find instructions for an exercise that explores the relationship between color and light.
 			</p>
 			<section class="author-info">
-				<p>Written by: Cortney Cassidy</p>
-				<p>Published in: April 10th, 2020</p>
+				<p>By <em><a href="https://medium.com/google-design/everyday-color-theory-59c1ca0770cb">Cortney Cassidy</a></em></p>
+				<p>April 10th, 2020</p>
 			</section>
 		</header>
 
