--- a/index.html
+++ b/index.html
@@ -26,8 +26,27 @@
 			</ul>
 		</nav>
 
-		<h1>
-			Landing Page
-		</h1>
-	</body>
+		<header class="bookshelf">
+			<section class="book1">
+				<h1>01</h1> 
+				<h1>Colour and Culture</h1>
+				<p>Ruben Pater</p>
+				<p>2016</p>
+			</section>
+
+			<section class="book2">
+				<h1>02</h1>
+				<h1>Gradients</h1>
+				<p>Daisy Alioto</p>
+				<p>2019</p>
+			</section>
+		
+			<section class="book3">
+				<h1>03<h1>
+				<h1>Everyday Color Theory</h1>
+				<p>Cortney Cassidy</p>
+				<p>2020</p>
+			</section>
+		</header>
+	</body>	
 </html>
