designed landing page

--- a/index.html
+++ b/index.html
@@ -9,44 +9,38 @@
 	</head>
 	
 	<body>
+		<header>
+			<h1>Colors in Design</h1>
+			<p>This website will explain why should designers be causious using colors when designing.</p>
+		</header>
+
 		<nav>
 			<ul class="navbar">
-				<li>
-					<a href="../">Home</a>
+				<li class="book">
+					<a href="../01 colour and culture/">
+						<p>01</p>
+						<p>Colour and Culture</p>
+						<p>Ruben Pater</p>
+						<p>2016</p>
+					</a>
 				</li>
-				<li>
-					<a href="../01 colour and culture/">01</a>
+				<li class="book">
+					<a href="../02 gradients/">
+						<p>02</p> 
+						<p>Gradients</p>
+						<p>Daisy Alioto</p>
+						<p>2019</p>
+					</a>
 				</li>
-				<li>
-					<a href="../02 everyday color theory/">02</a>
-				</li>
-				<li>
-					<a href="../03 gradients/">03</a>
+				<li class="book">
+					<a href="../03 everyday color theory/">
+						<p>03</p> 
+						<p>Everyday Color Theory</p>
+						<p>Cortney Cassidy</p>
+						<p>2020</p>
+					</a>
 				</li>
 			</ul>
 		</nav>
-
-		<header class="bookshelf">
-			<section class="book1">
-				<h1>01</h1> 
-				<h1>Colour and Culture</h1>
-				<p>Ruben Pater</p>
-				<p>2016</p>
-			</section>
-
-			<section class="book2">
-				<h1>02</h1>
-				<h1>Gradients</h1>
-				<p>Daisy Alioto</p>
-				<p>2019</p>
-			</section>
-		
-			<section class="book3">
-				<h1>03<h1>
-				<h1>Everyday Color Theory</h1>
-				<p>Cortney Cassidy</p>
-				<p>2020</p>
-			</section>
-		</header>
 	</body>	
 </html>
