id: book3-title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<li class="book">
 					<a href="../03 everyday color theory/">
 						<p>03</p> 
-						<p>Everyday Color Theory</p>
+						<p id="book3-title">Everyday Color Theory</p>
 						<p>Cortney Cassidy</p>
 						<p>2020</p>
 					</a>
